# HelloBoostIoServices

./: .gitignore  MJ_BUILD_CROSS_BOOST.txt  Makefile.am  Nuget OpenSsl notes.txt  README  README.md  README_SSL_MJ.txt  RunCrossConfigure.sh  config.h  configure.ac  create_cert_sign_req.sh  create_pub_part_separately.sh  examine_cert.sh  examine_sign_req.sh  gen_dh_param_1024.sh  make_client_ca.sh  make_priv_key.sh  make_server_cert_file.sh  mingw_convert_cert_to_pem.sh  mingw_convert_pem_to_cer.sh  sign_own_cert.sh
BoostArmhf/: user-config.jam
Docker/: Dockerfile  build_image.sh  crosstools.list  env_mikes_machine.sh  run_container_shell.sh
Docker/debian-jessie-armhf-boost/: Dockerfile  README  bootstrap_boost_build.sh  build_boost_armhf.sh  build_image.sh  install_boost.sh  run_container_mount.sh  run_container_shell.sh  run_container_volume.sh
Docker/debian-jessie-armhf-ioservices/: Dockerfile  README  build_image.sh  run_container_shell.sh
Docker/debian-jessie-armhf-ssl-helloserver/: Configure.sh  Dockerfile  README
HelloAsio/: TestPeriodicTimer.h  TestTimer.h  main.cpp
HelloAsio.xcodeproj/: project.pbxproj
HelloAsio.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
HelloBoostIoServices/: HelloBoostIoServices.sln  HelloBoostIoServices.vcxproj
IoServices/: DgramListener.cpp  DgramListener.h  EgSslServer.cpp  EgSslServer.hpp  IoBufferWrapper.cpp  IoBufferWrapper.h  IoCircularBuffer.cpp  IoCircularBuffer.h  IoEndPoint.cpp  IoEndPoint.h  IoLog.cpp  IoLog.h  IoLogConsumer.cpp  IoLogConsumer.h  IoServices.cp  IoServices.cpp  IoServices.h  IoServices.vcxproj  IoServices.vcxproj.filters  IoServicesImpl.cpp  IoServicesImpl.h  IoServicesPriv.h  Makefile.am  PeriodicTimer.h  ReadMe.txt  RunCrossConfigure.sh  SecurityOptions.h  StreamConnection.cpp  StreamConnection.h  StreamUnixConnection.cpp  StreamUnixConnection.h  TcpConnection.cpp  TcpConnection.hpp  TcpDomainConnection.cpp  TcpDomainConnection.h  TcpPeerConnection.cpp  TcpPeerConnection.h  TcpServer.cpp  TcpServer.h  TcpSslConnection.cpp  (+15 more)
OpenSslArmhf/: CrossCompileOpenSsl.sh  CrossMake.sh
RunSslClient/: main.cpp
RunSslServer/: ChangeLog  Makefile.am  ReadMe.txt  RunCrossConfigure.sh  RunSslServer.vcxproj  configure.ac  configure.scan  main.cpp  packages.config  stdafx.cpp
TestCircularAsio/: main.cpp
TestServices/: main.cpp
UnixDomainClient/: ClientUnixConnection.cpp  ClientUnixConnection.h  Makefile.am  UnixConnectionManager.cpp  UnixConnectionManager.h  main.cpp
UnixDomainClient/.deps/: main.Po
UnixDomainServer/: Control.h  Makefile.am  main.cpp
